--- a/scripts/ddm_v2.css
+++ b/scripts/ddm_v2.css
@@ -4,28 +4,33 @@
     height: 500px;
     overflow-y: scroll;
 }
+
 #ddMatching select {
     width: 100%;
 }
-#ddMatching .ui-btn-container{
+
+#ddMatching .ui-btn-container {
     box-sizing: border-box;
-    width:100%;
+    width: 100%;
     background-color: #eee;
     padding: 10px;
     text-align: right;
     position: sticky;
     bottom: 0;
 }
-#ddMatching .ui-btn-container button{
+
+#ddMatching .ui-btn-container button {
     display: inline;
     margin: 1px 2px;
     cursor: pointer;
     box-shadow: 1px 1px 2px rgba(0, 62, 85, 0.6);
 }
+
 #ddMatching button:active {
     box-shadow: none;
 }
-#ddMatching i{
+
+#ddMatching i {
     position: absolute;
     top: 11px;
     left: 0;
@@ -36,66 +41,80 @@
     line-height: 1;
     -webkit-font-smoothing: antialiased;
 }
-#ddMatching i.glyphicon-ok{
+
+#ddMatching i.glyphicon-ok {
     color: green;
 }
+
 .glyphicon-ok:before {
     content: "\2705";
 }
-#ddMatching i.glyphicon-remove{
+
+#ddMatching i.glyphicon-remove {
     color: red;
 }
+
 .glyphicon-remove:before {
     content: "\274C";
 }
 
 /* table styles */
 
-#ddMatching table tbody{
+#ddMatching table tbody {
     overflow-y: auto;
 }
+
 #ddMatching table th {
     top: 0;
     position: sticky;
     z-index: 1;
 }
-th{
+
+th {
     background-color: #eee;
 }
+
 #ddMatching table tbody td {
     position: relative;
 }
-#ddMatching table.left td{
+
+#ddMatching table.left td {
     text-align: left;
 }
 
 /** bootstrap override */
 
-#ddMatching select>option{
-max-width: 150px;
-overflow: hidden;
-word-wrap: normal !important;
-white-space: normal;
-white-space: break-spaces;
+#ddMatching select>option {
+    max-width: 150px;
+    overflow: hidden;
+    word-wrap: normal !important;
+    white-space: normal;
+    white-space: break-spaces;
 }
+
 .bootstrap-select .dropdown-menu li a span.text {
-width: 100%;
+    width: 100%;
 }
+
 .dropdown-menu>li>a {
-white-space: break-spaces;
+    white-space: break-spaces;
 }
+
 .bootstrap-select .dropdown-toggle .filter-option-inner-inner {
     overflow: unset;
     white-space: break-spaces;
     font-weight: normal;
 }
+
 .bootstrap-select button.btn.dropdown-toggle {
-background-color: unset;
-color: inherit;
-line-height: unset;
-font-size: 12px;
-border: 1px solid #ccc;
+    background-color: unset;
+    color: inherit;
+    line-height: unset;
+    font-size: 12px;
+    border: 1px solid #ccc;
+    max-width: unset;
 }
+
 .bs3.bootstrap-select .dropdown-toggle .filter-option {
-padding-left: inherit;
+    padding-left: inherit;
 }
